# tesstrain_package

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  index.rst
tesstrain/: __init__.py  __main__.py  arguments.py  generate.py  language_specific.py  wrapper.py
tests/: test_basic.py
